--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "name": "@mono/assist-me",
   "scripts": {
+    "clean": "git clean -xdf .turbo node_modules",
     "dev": "turbo dev",
     "dev:mobile": "turbo dev --filter=\"{./apps/mobile}...\"",
     "lint": "turbo lint",
