--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,9 @@
+# Monorepo
 node-linker=hoisted
+
+# Electron
+shamefully-hoist=true
+auto-install-peers=true
+
+electron_mirror=https://npmmirror.com/mirrors/electron/
+electron_builder_binaries_mirror=https://npmmirror.com/mirrors/electron-builder-binaries/
