--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "private": true,
   "name": "@mono/assist-me",
+  "engines": {
+    "pnpm": ">=9.5.0",
+    "node": ">=22.0.0"
+  },
   "scripts": {
     "clean": "git clean -xdf .turbo node_modules",
     "dev": "turbo dev",
     "dev:mobile": "turbo dev --filter=\"{./apps/mobile}...\"",
+    "dev:desktop": "turbo dev --filter=\"{./apps/desktop}...\"",
     "lint": "turbo lint",
     "test": "turbo test",
     "build": "turbo build",
