--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,7 @@
       "outputs": ["build/**", "node_modules/.cache/metro/**"]
     },
     "dev": {
+      "passThroughEnv": ["*"],
       "interactive": true,
       "cache": false,
       "persistent": true
