chore: allow pnpm deps to install scripts

--- a/.npmrc
+++ b/.npmrc
@@ -2,8 +2,8 @@
 node-linker=hoisted
 
 # Electron
-shamefully-hoist=true
-auto-install-peers=true
+# shamefully-hoist=true
+# auto-install-peers=true
 
-electron_mirror=https://npmmirror.com/mirrors/electron/
-electron_builder_binaries_mirror=https://npmmirror.com/mirrors/electron-builder-binaries/
+# electron_mirror=https://npmmirror.com/mirrors/electron/
+# electron_builder_binaries_mirror=https://npmmirror.com/mirrors/electron-builder-binaries/
