--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,17 +15,29 @@
     "eas-build-post-install": "pnpm run -w build:example"
   },
   "dependencies": {
-    "@mono/feature-home": "workspace:*",
     "@expo/vector-icons": "^14.0.2",
+    "@hookform/resolvers": "5.0.1",
+    "@mono/assist-api": "workspace:*",
+    "@mono/feature-home": "workspace:*",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@rneui/themed": "4.0.0-rc.8",
+    "@shopify/flash-list": "1.8.0",
+    "@shopify/react-native-skia": "1.12.3",
+    "@tanstack/react-query": "5.71.5",
     "expo": "~52.0.26",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
+    "expo-crypto": "14.0.2",
+    "expo-dev-client": "5.0.18",
+    "expo-device": "7.0.3",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.4",
+    "expo-network": "7.0.5",
     "expo-router": "~4.0.17",
+    "expo-secure-store": "14.0.1",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
@@ -33,17 +45,20 @@
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "7.55.0",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-udp": "4.1.7",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "zod": "3.24.2"
   },
   "devDependencies": {
-    "@mono/eslint-config": "workspace:*",
     "@babel/core": "^7.25.2",
+    "@mono/eslint-config": "workspace:*",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
