--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -24,6 +24,11 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
     "@mono/assist-api": "workspace:*",
+    "@tanstack/react-query": "4.29.14",
+    "@trpc/client": "10.33.1",
+    "@trpc/react-query": "10.33.1",
+    "@trpc/server": "10.33.1",
+    "electron-trpc": "0.7.1",
     "electron-updater": "^6.3.9",
     "zustand": "5.0.3"
   },
