--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -54,11 +54,13 @@
     "react-native-udp": "4.1.7",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "zod": "3.24.2"
+    "zod": "3.24.2",
+    "zustand": "5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@mono/eslint-config": "workspace:*",
+    "@rnx-kit/metro-resolver-symlinks": "0.2.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
