feat: generate route tree and implement root and index routes
- Added routeTree.gen.ts to define the route structure using TanStack Router.
- Created __root.tsx to establish the root route with an Outlet for nested routes.
- Implemented index.tsx as the main entry point route, including UI components and TRPC integration for initialization.

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -25,6 +25,7 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@mono/assist-api": "workspace:*",
     "@tanstack/react-query": "4.29.14",
+    "@tanstack/react-router": "1.115.3",
     "@trpc/client": "10.33.1",
     "@trpc/react-query": "10.33.1",
     "@trpc/server": "10.33.1",
@@ -36,6 +37,7 @@
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@tanstack/router-plugin": "1.115.3",
     "@types/node": "^22.13.13",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
