--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@mono/desktop",
+  "productName": "HelpMeButton",
   "version": "1.0.0",
   "description": "An Electron application with React and TypeScript",
   "main": "./out/main/index.js",
@@ -36,6 +37,7 @@
     "electron-updater": "^6.3.9",
     "react-hook-form": "7.55.0",
     "tamagui": "1.125.34",
+    "zod-validation-error": "3.4.0",
     "zustand": "5.0.3"
   },
   "devDependencies": {
