--- a/apps/desktop/tsconfig.web.json
+++ b/apps/desktop/tsconfig.web.json
@@ -1,6 +1,11 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.web.json",
-  "include": ["src/renderer/**/*", "src/preload/*.d.ts"],
+  "include": [
+    // Just the type
+    "src/main/trpc/router.ts",
+    "src/renderer/**/*",
+    "src/preload/*.d.ts"
+  ],
   "compilerOptions": {
     "composite": true,
     "jsx": "react-jsx",
