--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -37,6 +37,7 @@
     "electron-updater": "^6.3.9",
     "react-hook-form": "7.55.0",
     "tamagui": "1.125.34",
+    "tamagui-react-hook-form": "0.4.0",
     "zod-validation-error": "3.4.0",
     "zustand": "5.0.3"
   },
