--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -27,6 +27,7 @@
     "@hookform/resolvers": "5.0.1",
     "@mono/assist-api": "workspace:*",
     "@tamagui/config": "1.125.34",
+    "@tamagui/lucide-icons": "1.125.34",
     "@tamagui/vite-plugin": "1.125.34",
     "@tanstack/react-query": "4.29.14",
     "@tanstack/react-router": "1.115.3",
