--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -34,6 +34,7 @@
     "@trpc/client": "10.33.1",
     "@trpc/react-query": "10.33.1",
     "@trpc/server": "10.33.1",
+    "better-sqlite3": "11.9.1",
     "electron-trpc": "0.7.1",
     "electron-updater": "^6.3.9",
     "react-hook-form": "7.55.0",
@@ -47,6 +48,7 @@
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@tanstack/router-plugin": "1.115.3",
+    "@types/better-sqlite3": "7.6.13",
     "@types/node": "^22.13.13",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
