--- a/packages/assist-api/package.json
+++ b/packages/assist-api/package.json
@@ -30,6 +30,8 @@
     ]
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "2.2.2",
+    "drizzle-orm": "0.43.1",
     "i18next": "25.0.1",
     "zod": "3.24.2",
     "zod-i18n-map": "2.27.0"
