--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -35,6 +35,7 @@
     "@trpc/react-query": "10.33.1",
     "@trpc/server": "10.33.1",
     "better-sqlite3": "11.9.1",
+    "drizzle-orm": "0.43.1",
     "electron-trpc": "0.7.1",
     "electron-updater": "^6.3.9",
     "react-hook-form": "7.55.0",
