--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -42,8 +42,8 @@
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "catalog:react",
+    "react-dom": "catalog:react",
     "react-hook-form": "7.55.0",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
@@ -53,20 +53,20 @@
     "react-native-udp": "4.1.7",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "zod": "3.24.2",
-    "zustand": "5.0.3"
+    "zod": "catalog:utils",
+    "zustand": "catalog:utils"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@mono/eslint-config": "workspace:*",
     "@rnx-kit/metro-resolver-symlinks": "0.2.1",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "catalog:react",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "5.8.2"
   },
   "eslintConfig": {
     "extends": "@mono/eslint-config",
