--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "turbo": "^1.13.4",
-    "typescript": "^4.9.5"
+    "typescript": "5.8.2"
   },
   "prettier": {
     "printWidth": 100,
