refactor: reorganize main window logic and improve room state handling

--- a/apps/desktop/tsconfig.web.json
+++ b/apps/desktop/tsconfig.web.json
@@ -1,7 +1,7 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.web.json",
   "include": ["src/renderer/**/*", "src/preload/*.d.ts"],
-  "exclude": ["src/main/**/*"],
+  "exclude": ["src/main"],
   "compilerOptions": {
     "composite": true,
     "jsx": "react-jsx",
