refactor: Add Tailwind CSS and DaisyUI integration
- Introduced main.css to include Tailwind CSS and configured DaisyUI themes.

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -26,9 +26,6 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@hookform/resolvers": "5.0.1",
     "@mono/assist-api": "workspace:*",
-    "@tamagui/config": "1.125.34",
-    "@tamagui/lucide-icons": "1.125.34",
-    "@tamagui/vite-plugin": "1.125.34",
     "@tanstack/react-query": "4.29.14",
     "@tanstack/react-router": "1.115.3",
     "@trpc/client": "10.33.1",
@@ -38,24 +35,24 @@
     "drizzle-orm": "catalog:drizzle",
     "electron-trpc": "0.7.1",
     "electron-updater": "^6.3.9",
-    "react-hook-form": "7.55.0",
-    "tamagui": "1.125.34",
-    "tamagui-react-hook-form": "0.4.0",
-    "zod-validation-error": "3.4.0",
-    "zustand": "catalog:utils",
     "react": "catalog:react",
-    "react-dom": "catalog:react"
+    "react-dom": "catalog:react",
+    "react-hook-form": "7.55.0",
+    "zod-validation-error": "3.4.0",
+    "zustand": "catalog:utils"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@tailwindcss/vite": "4.1.5",
     "@tanstack/router-plugin": "1.115.3",
     "@types/better-sqlite3": "7.6.13",
     "@types/node": "catalog:node",
     "@types/react": "catalog:react",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "daisyui": "5.0.35",
     "electron": "35.1.2",
     "electron-builder": "24.13.3",
     "electron-vite": "^3.1.0",
@@ -64,6 +61,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "prettier": "^3.5.3",
+    "tailwind-merge": "3.2.0",
+    "tailwindcss": "4.1.5",
     "typescript": "5.8.2",
     "vite": "^6.2.3",
     "xvfb-maybe": "0.2.1"
