--- a/packages/assist-api/package.json
+++ b/packages/assist-api/package.json
@@ -23,6 +23,7 @@
     "test": "jest",
     "build": "tsup --clean",
     "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
+    "db:migrate": "drizzle-kit migrate --config=drizzle.config.ts",
     "db:push": "drizzle-kit push --config=drizzle.config.ts",
     "db:studio": "drizzle-kit studio"
   },
