--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "lucide-react": "0.507.0",
     "prettier": "^3.5.3",
     "tailwind-merge": "3.2.0",
     "tailwindcss": "4.1.5",
