--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -25,6 +25,7 @@
     "@shopify/flash-list": "1.8.0",
     "@shopify/react-native-skia": "1.12.3",
     "@tanstack/react-query": "5.71.5",
+    "drizzle-orm": "catalog:drizzle",
     "expo": "~52.0.26",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
@@ -38,6 +39,7 @@
     "expo-router": "~4.0.17",
     "expo-secure-store": "14.0.1",
     "expo-splash-screen": "~0.29.21",
+    "expo-sqlite": "15.2.9",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
