feat(database): add DatabaseProvider component with migrations and SQLite integration
- Created a new DatabaseProvider component to manage database connections and migrations.
- Integrated drizzle-orm with expo-sqlite for database operations.
- Implemented migration handling with error and success states.
- Configured Babel to support inline SQL imports.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "clean": "git clean -xdf .turbo node_modules",
     "dev": "turbo dev",
     "dev:mobile": "turbo dev --filter=\"{./apps/mobile}...\"",
+    "dev:mobile:fix": "cd apps/mobile & expo install --fix",
+    "dev:mobile:pre-android": "pnpm -F @mono/mobile android",
+    "dev:mobile:pre-ios": "pnpm -F @mono/mobile ios",
     "dev:desktop": "turbo dev --filter=\"{./apps/desktop}...\"",
     "lint": "turbo lint",
     "test": "turbo test",
