--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -22,49 +22,50 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@rneui/themed": "4.0.0-rc.8",
-    "@shopify/flash-list": "1.8.0",
-    "@shopify/react-native-skia": "1.12.3",
+    "@shopify/flash-list": "1.7.6",
+    "@shopify/react-native-skia": "2.0.0-next.2",
     "@tanstack/react-query": "5.71.5",
     "drizzle-orm": "catalog:drizzle",
-    "expo": "~52.0.26",
-    "expo-blur": "~14.0.2",
-    "expo-constants": "~17.0.4",
-    "expo-crypto": "14.0.2",
-    "expo-dev-client": "5.0.18",
-    "expo-device": "7.0.3",
-    "expo-font": "~13.0.3",
-    "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.4",
-    "expo-network": "7.0.5",
-    "expo-router": "~4.0.17",
-    "expo-secure-store": "14.0.1",
-    "expo-splash-screen": "~0.29.21",
-    "expo-sqlite": "15.2.9",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.1",
-    "expo-system-ui": "~4.0.7",
-    "expo-web-browser": "~14.0.2",
-    "react": "catalog:react",
-    "react-dom": "catalog:react",
+    "expo": "~53.0.7",
+    "expo-blur": "~14.1.4",
+    "expo-constants": "~17.1.5",
+    "expo-crypto": "~14.1.4",
+    "expo-dev-client": "~5.1.8",
+    "expo-device": "~7.1.4",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-linking": "~7.1.4",
+    "expo-network": "~7.1.5",
+    "expo-router": "~5.0.5",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.8",
+    "expo-sqlite": "~15.2.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.4",
+    "expo-system-ui": "~5.0.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "7.55.0",
-    "react-native": "0.76.7",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.5",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-udp": "4.1.7",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-web": "~0.20.0",
+    "react-native-webview": "13.13.5",
     "zod": "catalog:utils",
     "zustand": "catalog:utils"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@expo/cli": "0.24.11",
     "@mono/eslint-config": "workspace:*",
     "@rnx-kit/metro-resolver-symlinks": "0.2.1",
     "@types/jest": "^29.5.12",
     "@types/react": "catalog:react",
     "@types/react-test-renderer": "^18.3.0",
+    "babel-plugin-inline-import": "3.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
