--- a/packages/assist-api/package.json
+++ b/packages/assist-api/package.json
@@ -15,6 +15,10 @@
       "types": "./src/index.ts",
       "import": "./build/index.js",
       "require": "./build/index.cjs"
+    },
+    "./migrations": {
+      "import": "./migrations/migrations.js",
+      "require": "./migrations/migrations.js"
     }
   },
   "scripts": {
