--- a/packages/assist-api/package.json
+++ b/packages/assist-api/package.json
@@ -17,6 +17,11 @@
       "import": "./build/index.js",
       "require": "./build/index.cjs"
     },
+    "./i18n/indexed-locale": {
+      "types": "./build/i18n/indexed-locale.d.ts",
+      "import": "./build/i18n/indexed-locale.js",
+      "require": "./build/i18n/indexed-locale.cjs"
+    },
     "./i18n/react": {
       "types": "./build/i18n/i18n-react.d.ts",
       "import": "./build/i18n/i18n-react.js",
@@ -40,8 +45,8 @@
   },
   "typesVersions": {
     "*": {
-      "i18n": [
-        "./build/i18n/index.d.ts"
+      "i18n/indexed-locale": [
+        "./build/i18n/indexed-locale.d.ts"
       ],
       "i18n/react": [
         "./build/i18n/i18n-react.d.ts"
@@ -82,7 +87,8 @@
     "drizzle-orm": "catalog:drizzle",
     "i18next": "catalog:utils",
     "zod": "catalog:utils",
-    "zod-i18n-map": "catalog:utils"
+    "zod-i18n-map": "catalog:utils",
+    "typesafe-i18n": "5.26.2"
   },
   "devDependencies": {
     "@mono/eslint-config": "workspace:*",
@@ -91,12 +97,12 @@
     "drizzle-kit": "0.31.0",
     "react-native-udp": "4.1.7",
     "tsup": "^8.3.5",
-    "typesafe-i18n": "5.26.2",
     "typescript": "5.8.2"
   },
   "peerDependencies": {
     "drizzle-orm": "catalog:drizzle",
     "zod": "catalog:utils",
-    "zustand": "catalog:utils"
+    "zustand": "catalog:utils",
+    "typesafe-i18n": "5.26.2"
   }
 }
