feat: implement LocalSessionGuard and StartSequenceProvider for session management and initialization
refactor: update UDPClient and SocketAdapter to improve broadcast handling

chore: rename dev script in package.json for clarity

fix: enhance DatabaseProvider to handle migration errors and improve state management

delete: remove unused RegisterScreen and SessionProvider components

add: create SubmitButton component for form submission

add: implement useLocalDataRepository hook for local data management

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -4,7 +4,7 @@
   "description": "AssistMeButton Landing page",
   "type": "module",
   "scripts": {
-    "dev": "astro dev",
+    "dev-web": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "check": "astro check",
