--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "clear": "turbo clean",
     "clean": "git clean -xdf .turbo node_modules",
-    "dev": "turbo dev",
+    "dev-assist": "turbo dev",
     "dev:mobile": "turbo dev --filter=\"{./apps/mobile}...\"",
     "dev:mobile:fix": "cd apps/mobile & expo install --fix",
     "dev:mobile:pre-android": "pnpm -F @mono/mobile android",
