refactor(mix): Added missing translations to mobile, temp fix to unexpected mobile behaviour bind to 0.0.0.0 address, fix mobile providers

--- a/packages/assist-api/package.json
+++ b/packages/assist-api/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "clean": "git clean -xdf .turbo build node_modules",
-    "dev": "tsup --watch --silent",
+    "dev": "tsup --watch",
     "lint": "eslint --ext js,ts",
     "test": "jest",
     "build": "tsup --clean",
